--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
     <head>
         <style>
             body {
-                background-color: red;
+                background-color: gray;
             }
             h1 {
-                color: blue; 
-                font-size: 400px;
+                color: rgb(255, 255, 255); 
+                font-size: 40
+                px;
             }
         </style>
     </head>
@@ -16,7 +17,10 @@
             console.log("hey you yea you get outta here this is a construction zone!")
         </script>
         <h1>
-            8==============================)
+            Taco's hub
         </h1>
+        <a href = 'https://discord.gg/K5JnuC5c6s'>
+        <img src="/images/discord_logo_small.png" alt="discord">
+        </a>
     </body>
 </html>
