--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
     <head>
         <style>
+            #discord-link {
+                width: 100px;
+            }
             body {
                 background-color: gray;
             }
@@ -20,7 +23,7 @@
             Taco's hub
         </h1>
         <a href = 'https://discord.gg/K5JnuC5c6s'>
-        <img src="/images/discord_logo_small.png" alt="discord">
+        <img id = 'discord-link' src="/images/discord_logo_small.png" alt="discord">
         </a>
     </body>
 </html>
