messing with moveing discord

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
         <style>
             #discord-link {
                 width: 100px;
+                position: relative; top: px100;
+                right: 100
+                ;
             }
             body {
                 background-color: gray;
