added youtube logo

--- a/index.html
+++ b/index.html
@@ -2,11 +2,15 @@
 <html>
     <head>
         <style>
+            #youtube-link {
+                width: 400px;
+                position: relative; top: 100;
+                left: 0;
+            }
             #discord-link {
-                width: 100px;
-                position: relative; top: px100;
-                right: 100
-                ;
+                width: 400px;
+                position: relative; top: 100;
+                right: 0;
             }
             body {
                 background-color: gray;
@@ -28,5 +32,8 @@
         <a href = 'https://discord.gg/K5JnuC5c6s'>
         <img id = 'discord-link' src="/images/discord_logo_small.png" alt="discord">
         </a>
+        <a href= "https://www.youtube.com/channel/UCgL05ZObeG-mgS2Ssi04YHw">
+        <img src="/images/youtube logo.jpg" alt="youtube">
+        </a>  
     </body>
 </html>
