--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    align-items: center;
+    align-content: flex-end;
 }
 
 .flexbox-item {
