--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
         .link {
             border: 5px solid black;
             border-radius: 5px;
+            padding: 5px;
+        }
+
+        .link-image {
             width: 100px;
-            height: 100px;
         }
         </style>
     </head>
@@ -22,17 +25,17 @@
         <div id="link-container">
             <div class="link">
                 <a href="https://discord.gg/K5JnuC5c6s">
-                    <img src="/images/discord_logo_small.png" alt="Discord">
+                    <img class="link-image" src="/images/discord_logo_small.png" alt="Discord">
                 </a>
             </div>
             <div class="link">
                 <a href="https://www.youtube.com/channel/UCgL05ZObeG-mgS2Ssi04YHw">
-                    <img src="/images/youtube_logo_icon_168737.png" alt="Youtube">
+                    <img class="link-image" src="/images/youtube_logo_icon_168737.png" alt="Youtube">
                 </a>
             </div> 
             <div class="link">
                 <a href="https://www.twitch.tv/pattaconaytor">
-                    <img src="/images/twitch logo.png" alt="Twitch">
+                    <img class="link-image" src="/images/twitch logo.png" alt="Twitch">
                 </a>
             </div>
         </div>
